# ptah

./: .clang-format  .ctags  .gitignore  CLAUDE.md  CMAKE_README.md  CMakeLists.txt  Cargo.toml  LICENSE  LINTER.md  OPENCODE.md  OpenCode.md  README.md  VALGRIND.md  VALGRIND_SUMMARY.md  build.zig  generate_tags.sh  lint.sh  requirements.md  run_valgrind_tests.sh  setup_lsp.sh  valgrind_suppressions.supp  valgrind_test.sh  valgrind_wrapper.sh
app/examples/: README.md
app/ptah-app/: Cargo.toml
app/ptah-app/src/: main.rs
apps/demo/: CMakeLists.txt
apps/demo/src/: main.c
apps/example_app/: build.zig
apps/example_app/src/: main.zig  main_test.zig
apps/examples/: CMakeLists.txt  README.md
apps/examples/iterator_example/: CMakeLists.txt  iterator_example.c
apps/examples/pearl_example/: CMakeLists.txt  pearl_example.c
apps/examples/sam_mnist/: CMakeLists.txt
apps/examples/sam_mnist/include/: mnist_loader.h
apps/examples/sam_mnist/src/: main.c  mnist_loader.c
apps/examples/samcl_example/: CMakeLists.txt
apps/examples/samcl_example/src/: main.c
apps/examples/sammath_example/: CMakeLists.txt
apps/examples/sammath_example/src/: main.c
apps/examples/samrng_example/: CMakeLists.txt
apps/examples/samrng_example/src/: main.c
apps/examples/samset_example/: CMakeLists.txt  samset_example.c
apps/examples/sdl_example/: CMakeLists.txt  README.md  sdl_example.c
apps/examples/src/: typesafe_example.c
apps/examples/typesafe_example/: CMakeLists.txt  typesafe_example.c
apps/prototype/samtrader/: CMakeLists.txt
apps/samspacetrader/: CMakeLists.txt
apps/samspacetrader/include/: samspacetrader.h
apps/samspacetrader/src/: main.c
apps/samtrader/: CMakeLists.txt  README.md  my_config.ini
apps/samtrader/examples/: config.ini
apps/samtrader/include/samtrader/: samtrader.h
apps/samtrader/include/samtrader/adapters/: typst_report_adapter.h
apps/samtrader/include/samtrader/domain/: backtest.h  indicator.h  metrics.h  ohlcv.h  position.h  rule.h
apps/samtrader/include/samtrader/ports/: report_port.h
apps/samtrader/src/: main.c
apps/samtrader/src/adapters/: typst_report_adapter.c
apps/samtrader/src/domain/: indicator.c  metrics.c  ohlcv.c  rule_eval.c
apps/samtrader/test/: test_backtest.c  test_e2e.c  test_indicator_calc.c  test_ohlcv.c  test_report.c  test_rule_eval.c  test_rule_parser.c
apps/spikes/samplex/: CMakeLists.txt
apps/spikes/samtracer/: CMakeLists.txt
apps/spikes/samtrader/: CMakeLists.txt
cmake/: PtahExample.cmake  PtahLibraryManager.cmake  README.md  ptahConfig.cmake.in
cmake/adapters/: PtahCMakeAdapter.cmake  PtahCargoAdapter.cmake  PtahHeaderOnlyAdapter.cmake  PtahMakeAdapter.cmake  PtahMesonAdapter.cmake
cmake/templates/: PtahConfigTemplate.cmake.in  PtahFindTemplate.cmake.in
doc/: cmake-library-management.md
docs/: EXTERNAL_LIBRARIES.md
lib/ptah-lib/: Cargo.toml
lib/sam-ai/: Cargo.toml
lib/sam-ai/src/: lib.rs
lib/sam-ai/src/shaders/: double.wgsl
libs/cartouche/: CMakeLists.txt
libs/cartouche/include/: cartouche.h
libs/cartouche/src/: cartouche.c  main.c
libs/datazoo/: CMakeLists.txt
libs/datazoo/include/: datazoo.h
libs/datazoo/include/datazoo/: hash.h  honeycomb.h  pearl.h  starfish.h
libs/datazoo/src/: hash.c  honeycomb.c  pearl.c  starfish.c
libs/datazoo/test/: datazoo_test.c  datazoo_tests.h  honeycomb_tests.c  pearl_basic_test.c  pearl_collision_test.c  pearl_edge_case_test.c  pearl_edge_cases_test.c  pearl_functional_test.c  pearl_performance_test.c  pearl_resize_test.c  pearl_typesafe_test.c  pearl_utility_test.c
libs/example_lib/: build.zig
libs/samcl/: CMakeLists.txt
libs/samdata/: CMakeLists.txt  README.md
libs/samdata/include/: samdata.h
libs/samdata/include/samdata/: samhash.h  samhashmap.h  samrng.h  samset.h
libs/samdata/src/: samhash.c  samhashmap.c  samrng.c  samset.c
libs/samdata/test/: samdata_test.c  samdata_tests.h  samhashmap_tests.c  samrng_test.c  samset_basic_test.c  samset_collision_test.c  samset_edge_case_test.c  samset_functional_test.c  samset_performance_test.c  samset_resize_test.c  samset_typesafe_test.c  samset_utility_test.c
libs/sammath/: CMakeLists.txt
libs/samneural/: CMakeLists.txt
libs/samrena/: CMakeLists.txt  README.md
libs/samrena/include/: samrena.h  samvector.h
libs/samrena/src/: new_samvector.c  samrena.c  samrena_config.h.in  samrena_internal.h  samrena_vector.c
libs/samrena/src/adapters/: chained_adapter.c  chained_adapter.h  virtual_adapter.c  virtual_adapter.h
libs/samrena/test/: README.md  samrena_test.c  samrena_vector_test.c  test_arena_types.c  test_features.c  test_samrena_adapters.c  test_samvector_access.c  test_samvector_capacity.c  test_samvector_edge_cases.c  test_samvector_lifecycle.c  test_samvector_operations.c  test_samvector_performance.c  test_samvector_typesafe.c  test_vector_capacity.c  test_vector_ownership.c
libs/samvulkan/: CMakeLists.txt
libs/samvulkan/include/: samvulkan.h
libs/samvulkan/include/samvulkan/: compute.h  device.h  instance.h
libs/samvulkan/src/: compute.c  device.c  instance.c  samvulkan.c
libs/samvulkan/test/: test_samvulkan.c
libs/thoth/: build.zig
planning/: 00_master_plan.md  00_overview.md  02_mandatory_samrena.md  08_error_handling.md  10_comprehensive_testing.md  11_const_correctness.md  16_save_restore_points.md  18_bulk_operations.md  19_thread_safety_documentation.md  20_custom_allocators.md  ADJUSTMENT_TEMPLATE.md  PLANNING_CHANGELOG.md  cartouche.md  claude_cartouche.md  goose_cartouche.md  implementation_sop.md  initial_ai_implementation.md  opencode_air_cartouche.md  opencode_qwen_cartouche.md  pearl_planning.md  prompt.md  ptah_library_building.md  samrena.md  samrena_expansion.md  vision_sop.md  wgpu_prompt.md
planning/.opencode/: opencode.db-shm  opencode.db-wal
planning/02_samvector_api_improvements_planning/: overview.md
planning/active/: samplex_async_engine.md
planning/samrena/: overview.md
planning/simulation/: initial.md  prototype.md
planning/tickets/: SPX-001.md  SPX-002.md
scripts/: compile_dot.sh  run_mnist.sh
(+114 files in other folders)
