[package]
name = "sam-ai"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
wgpu = "26.0.1"
pollster = "0.4"
anyhow = "1"
bytemuck = { version = "1", features = ["extern_crate_alloc"] }
futures-intrusive = "0.5"
